mixit_frontend/src/css/About.css
.about{
    font-family: 'Josefin Sans', cursive;
    background-image: url("../images/about-bg.jpg");
    background-size: 100%;
    height:100%;
}

.about-links-container{
    font-family: 'Leckerli One', cursive;
    margin-top:-1em;
}

.about-link{
    display: inline;
    margin-right: 0.5em;
}

.about-link a{
    color:white;
}

.about-link a:hover{
    color:teal;
    text-decoration:none;
}

.about-link-separator{
    font-size:3em;
    display: inline;
    margin-right: 0.5em;
    color:white;
}

.about-chunk{
    width: 35em;
    border-radius:10px;
    margin:auto;
    background:white;
    font-size: 1.5em;
    /* Use padding here to prevent underflow into NavBar */
    margin-top: 2em;
    padding-top: 50px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    margin-bottom:0.5em;
}

.about-chunk h3{
    padding-top:0px;
    /* border: 1px solid black; */
}

.list-header{
    text-decoration:underline;
}
.method-list{
    list-style-type: inside;
}
.method-list li{
    display: list-item;
    list-style-type: circle;
}

